stp-r940/src/parser/smt2.output
Grammar

    0 $accept: cmd "end of file"

    1 cmd: commands "end of file"

    2 commands: cmdi commands
    3         | cmdi

    4 cmdi: LPAREN_TOK EXIT_TOK RPAREN_TOK
    5     | LPAREN_TOK CHECK_SAT_TOK RPAREN_TOK
    6     | LPAREN_TOK LOGIC_TOK FORMID_TOK RPAREN_TOK
    7     | LPAREN_TOK NOTES_TOK attribute FORMID_TOK RPAREN_TOK
    8     | LPAREN_TOK NOTES_TOK attribute DECIMAL_TOK RPAREN_TOK
    9     | LPAREN_TOK NOTES_TOK attribute STRING_TOK RPAREN_TOK
   10     | LPAREN_TOK NOTES_TOK attribute RPAREN_TOK
   11     | LPAREN_TOK DECLARE_FUNCTION_TOK var_decl RPAREN_TOK
   12     | LPAREN_TOK FORMULA_TOK an_formula RPAREN_TOK

   13 status: SAT_TOK
   14       | UNSAT_TOK
   15       | UNKNOWN_TOK

   16 attribute: SOURCE_TOK
   17          | CATEGORY_TOK
   18          | DIFFICULTY_TOK
   19          | VERSION_TOK
   20          | STATUS_TOK status

   21 var_decl: FORMID_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   22         | FORMID_TOK LPAREN_TOK RPAREN_TOK BOOL_TOK
   23         | FORMID_TOK LPAREN_TOK RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

   24 an_formulas: an_formula
   25            | an_formulas an_formula

   26 an_formula: TRUE_TOK
   27           | FALSE_TOK
   28           | FORMID_TOK
   29           | LPAREN_TOK EQ_TOK an_term an_term RPAREN_TOK
   30           | LPAREN_TOK DISTINCT_TOK an_terms RPAREN_TOK
   31           | LPAREN_TOK DISTINCT_TOK an_formulas RPAREN_TOK
   32           | LPAREN_TOK BVSLT_TOK an_term an_term RPAREN_TOK
   33           | LPAREN_TOK BVSLE_TOK an_term an_term RPAREN_TOK
   34           | LPAREN_TOK BVSGT_TOK an_term an_term RPAREN_TOK
   35           | LPAREN_TOK BVSGE_TOK an_term an_term RPAREN_TOK
   36           | LPAREN_TOK BVLT_TOK an_term an_term RPAREN_TOK
   37           | LPAREN_TOK BVLE_TOK an_term an_term RPAREN_TOK
   38           | LPAREN_TOK BVGT_TOK an_term an_term RPAREN_TOK
   39           | LPAREN_TOK BVGE_TOK an_term an_term RPAREN_TOK
   40           | LPAREN_TOK an_formula RPAREN_TOK
   41           | LPAREN_TOK NOT_TOK an_formula RPAREN_TOK
   42           | LPAREN_TOK IMPLIES_TOK an_formula an_formula RPAREN_TOK
   43           | LPAREN_TOK ITE_TOK an_formula an_formula an_formula RPAREN_TOK
   44           | LPAREN_TOK AND_TOK an_formulas RPAREN_TOK
   45           | LPAREN_TOK OR_TOK an_formulas RPAREN_TOK
   46           | LPAREN_TOK XOR_TOK an_formula an_formula RPAREN_TOK
   47           | LPAREN_TOK EQ_TOK an_formula an_formula RPAREN_TOK
   48           | LPAREN_TOK LET_TOK LPAREN_TOK lets RPAREN_TOK an_formula RPAREN_TOK

   49 lets: let lets
   50     | let

   51 let: LPAREN_TOK FORMID_TOK an_formula RPAREN_TOK
   52    | LPAREN_TOK FORMID_TOK an_term RPAREN_TOK

   53 an_terms: an_term
   54         | an_terms an_term

   55 an_term: TERMID_TOK
   56        | LPAREN_TOK an_term RPAREN_TOK
   57        | SELECT_TOK an_term an_term
   58        | STORE_TOK an_term an_term an_term
   59        | LPAREN_TOK UNDERSCORE_TOK BVEXTRACT_TOK NUMERAL_TOK NUMERAL_TOK RPAREN_TOK an_term
   60        | LPAREN_TOK UNDERSCORE_TOK BVZX_TOK NUMERAL_TOK RPAREN_TOK an_term
   61        | LPAREN_TOK UNDERSCORE_TOK BVSX_TOK NUMERAL_TOK RPAREN_TOK an_term
   62        | ITE_TOK an_formula an_term an_term
   63        | BVCONCAT_TOK an_term an_term
   64        | BVNOT_TOK an_term
   65        | BVNEG_TOK an_term
   66        | BVAND_TOK an_term an_term
   67        | BVOR_TOK an_term an_term
   68        | BVXOR_TOK an_term an_term
   69        | BVXNOR_TOK an_term an_term
   70        | BVCOMP_TOK an_term an_term
   71        | BVSUB_TOK an_term an_term
   72        | BVPLUS_TOK an_term an_term
   73        | BVMULT_TOK an_term an_term
   74        | BVDIV_TOK an_term an_term
   75        | BVMOD_TOK an_term an_term
   76        | SBVDIV_TOK an_term an_term
   77        | SBVREM_TOK an_term an_term
   78        | SBVMOD_TOK an_term an_term
   79        | BVNAND_TOK an_term an_term
   80        | BVNOR_TOK an_term an_term
   81        | BVLEFTSHIFT_1_TOK an_term an_term
   82        | BVRIGHTSHIFT_1_TOK an_term an_term
   83        | BVARITHRIGHTSHIFT_TOK an_term an_term
   84        | LPAREN_TOK UNDERSCORE_TOK BVROTATE_LEFT_TOK NUMERAL_TOK RPAREN_TOK an_term
   85        | LPAREN_TOK UNDERSCORE_TOK BVROTATE_RIGHT_TOK NUMERAL_TOK RPAREN_TOK an_term
   86        | LPAREN_TOK UNDERSCORE_TOK BVREPEAT_TOK NUMERAL_TOK RPAREN_TOK an_term
   87        | UNDERSCORE_TOK BVCONST_DECIMAL_TOK NUMERAL_TOK
   88        | BVCONST_HEXIDECIMAL_TOK
   89        | BVCONST_BINARY_TOK


Terminals, with rules where they appear

"end of file" (0) 0 1
error (256)
NUMERAL_TOK (258) 21 23 59 60 61 84 85 86 87
BVCONST_DECIMAL_TOK (259) 87
BVCONST_BINARY_TOK (260) 89
BVCONST_HEXIDECIMAL_TOK (261) 88
DECIMAL_TOK (262) 8
FORMID_TOK (263) 6 7 21 22 23 28 51 52
TERMID_TOK (264) 55
STRING_TOK (265) 9
SOURCE_TOK (266) 16
CATEGORY_TOK (267) 17
DIFFICULTY_TOK (268) 18
VERSION_TOK (269) 19
STATUS_TOK (270) 20
UNDERSCORE_TOK (271) 21 23 59 60 61 84 85 86 87
LPAREN_TOK (272) 4 5 6 7 8 9 10 11 12 21 22 23 29 30 31 32 33 34 35
    36 37 38 39 40 41 42 43 44 45 46 47 48 51 52 56 59 60 61 84 85
    86
RPAREN_TOK (273) 4 5 6 7 8 9 10 11 12 21 22 23 29 30 31 32 33 34 35
    36 37 38 39 40 41 42 43 44 45 46 47 48 51 52 56 59 60 61 84 85
    86
SAT_TOK (274) 13
UNSAT_TOK (275) 14
UNKNOWN_TOK (276) 15
BVLEFTSHIFT_1_TOK (277) 81
BVRIGHTSHIFT_1_TOK (278) 82
BVARITHRIGHTSHIFT_TOK (279) 83
BVPLUS_TOK (280) 72
BVSUB_TOK (281) 71
BVNOT_TOK (282) 64
BVMULT_TOK (283) 73
BVDIV_TOK (284) 74
SBVDIV_TOK (285) 76
BVMOD_TOK (286) 75
SBVREM_TOK (287) 77
SBVMOD_TOK (288) 78
BVNEG_TOK (289) 65
BVAND_TOK (290) 66
BVOR_TOK (291) 67
BVXOR_TOK (292) 68
BVNAND_TOK (293) 79
BVNOR_TOK (294) 80
BVXNOR_TOK (295) 69
BVCONCAT_TOK (296) 63
BVLT_TOK (297) 36
BVGT_TOK (298) 38
BVLE_TOK (299) 37
BVGE_TOK (300) 39
BVSLT_TOK (301) 32
BVSGT_TOK (302) 34
BVSLE_TOK (303) 33
BVSGE_TOK (304) 35
BVSX_TOK (305) 61
BVEXTRACT_TOK (306) 59
BVZX_TOK (307) 60
BVROTATE_RIGHT_TOK (308) 85
BVROTATE_LEFT_TOK (309) 84
BVREPEAT_TOK (310) 86
BVCOMP_TOK (311) 70
BITVEC_TOK (312) 21 23
ARRAY_TOK (313) 23
BOOL_TOK (314) 22
TRUE_TOK (315) 26
FALSE_TOK (316) 27
NOT_TOK (317) 41
AND_TOK (318) 44
OR_TOK (319) 45
XOR_TOK (320) 46
ITE_TOK (321) 43 62
EQ_TOK (322) 29 47
IMPLIES_TOK (323) 42
DISTINCT_TOK (324) 30 31
LET_TOK (325) 48
EXIT_TOK (326) 4
CHECK_SAT_TOK (327) 5
LOGIC_TOK (328) 6
NOTES_TOK (329) 7 8 9 10
DECLARE_FUNCTION_TOK (330) 11
FORMULA_TOK (331) 12
SELECT_TOK (332) 57
STORE_TOK (333) 58


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
cmd (80)
    on left: 1, on right: 0
commands (81)
    on left: 2 3, on right: 1 2
cmdi (82)
    on left: 4 5 6 7 8 9 10 11 12, on right: 2 3
status (83)
    on left: 13 14 15, on right: 20
attribute (84)
    on left: 16 17 18 19 20, on right: 7 8 9 10
var_decl (85)
    on left: 21 22 23, on right: 11
an_formulas (86)
    on left: 24 25, on right: 25 31 44 45
an_formula (87)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43
    44 45 46 47 48, on right: 12 24 25 40 41 42 43 46 47 48 51 62
lets (88)
    on left: 49 50, on right: 48 49
let (89)
    on left: 51 52, on right: 49 50
an_terms (90)
    on left: 53 54, on right: 30 54
an_term (91)
    on left: 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
    73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89, on right: 29
    32 33 34 35 36 37 38 39 52 53 54 56 57 58 59 60 61 62 63 64 65
    66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86


State 0

    0 $accept: . cmd "end of file"

    LPAREN_TOK  shift, and go to state 1

    cmd       go to state 2
    commands  go to state 3
    cmdi      go to state 4


State 1

    4 cmdi: LPAREN_TOK . EXIT_TOK RPAREN_TOK
    5     | LPAREN_TOK . CHECK_SAT_TOK RPAREN_TOK
    6     | LPAREN_TOK . LOGIC_TOK FORMID_TOK RPAREN_TOK
    7     | LPAREN_TOK . NOTES_TOK attribute FORMID_TOK RPAREN_TOK
    8     | LPAREN_TOK . NOTES_TOK attribute DECIMAL_TOK RPAREN_TOK
    9     | LPAREN_TOK . NOTES_TOK attribute STRING_TOK RPAREN_TOK
   10     | LPAREN_TOK . NOTES_TOK attribute RPAREN_TOK
   11     | LPAREN_TOK . DECLARE_FUNCTION_TOK var_decl RPAREN_TOK
   12     | LPAREN_TOK . FORMULA_TOK an_formula RPAREN_TOK

    EXIT_TOK              shift, and go to state 5
    CHECK_SAT_TOK         shift, and go to state 6
    LOGIC_TOK             shift, and go to state 7
    NOTES_TOK             shift, and go to state 8
    DECLARE_FUNCTION_TOK  shift, and go to state 9
    FORMULA_TOK           shift, and go to state 10


State 2

    0 $accept: cmd . "end of file"

    "end of file"  shift, and go to state 11


State 3

    1 cmd: commands . "end of file"

    "end of file"  shift, and go to state 12


State 4

    2 commands: cmdi . commands
    3         | cmdi .

    LPAREN_TOK  shift, and go to state 1

    $default  reduce using rule 3 (commands)

    commands  go to state 13
    cmdi      go to state 4


State 5

    4 cmdi: LPAREN_TOK EXIT_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 14


State 6

    5 cmdi: LPAREN_TOK CHECK_SAT_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 15


State 7

    6 cmdi: LPAREN_TOK LOGIC_TOK . FORMID_TOK RPAREN_TOK

    FORMID_TOK  shift, and go to state 16


State 8

    7 cmdi: LPAREN_TOK NOTES_TOK . attribute FORMID_TOK RPAREN_TOK
    8     | LPAREN_TOK NOTES_TOK . attribute DECIMAL_TOK RPAREN_TOK
    9     | LPAREN_TOK NOTES_TOK . attribute STRING_TOK RPAREN_TOK
   10     | LPAREN_TOK NOTES_TOK . attribute RPAREN_TOK

    SOURCE_TOK      shift, and go to state 17
    CATEGORY_TOK    shift, and go to state 18
    DIFFICULTY_TOK  shift, and go to state 19
    VERSION_TOK     shift, and go to state 20
    STATUS_TOK      shift, and go to state 21

    attribute  go to state 22


State 9

   11 cmdi: LPAREN_TOK DECLARE_FUNCTION_TOK . var_decl RPAREN_TOK

    FORMID_TOK  shift, and go to state 23

    var_decl  go to state 24


State 10

   12 cmdi: LPAREN_TOK FORMULA_TOK . an_formula RPAREN_TOK

    FORMID_TOK  shift, and go to state 25
    LPAREN_TOK  shift, and go to state 26
    TRUE_TOK    shift, and go to state 27
    FALSE_TOK   shift, and go to state 28

    an_formula  go to state 29


State 11

    0 $accept: cmd "end of file" .

    $default  accept


State 12

    1 cmd: commands "end of file" .

    $default  reduce using rule 1 (cmd)


State 13

    2 commands: cmdi commands .

    $default  reduce using rule 2 (commands)


State 14

    4 cmdi: LPAREN_TOK EXIT_TOK RPAREN_TOK .

    $default  reduce using rule 4 (cmdi)


State 15

    5 cmdi: LPAREN_TOK CHECK_SAT_TOK RPAREN_TOK .

    $default  reduce using rule 5 (cmdi)


State 16

    6 cmdi: LPAREN_TOK LOGIC_TOK FORMID_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 30


State 17

   16 attribute: SOURCE_TOK .

    $default  reduce using rule 16 (attribute)


State 18

   17 attribute: CATEGORY_TOK .

    $default  reduce using rule 17 (attribute)


State 19

   18 attribute: DIFFICULTY_TOK .

    $default  reduce using rule 18 (attribute)


State 20

   19 attribute: VERSION_TOK .

    $default  reduce using rule 19 (attribute)


State 21

   20 attribute: STATUS_TOK . status

    SAT_TOK      shift, and go to state 31
    UNSAT_TOK    shift, and go to state 32
    UNKNOWN_TOK  shift, and go to state 33

    status  go to state 34


State 22

    7 cmdi: LPAREN_TOK NOTES_TOK attribute . FORMID_TOK RPAREN_TOK
    8     | LPAREN_TOK NOTES_TOK attribute . DECIMAL_TOK RPAREN_TOK
    9     | LPAREN_TOK NOTES_TOK attribute . STRING_TOK RPAREN_TOK
   10     | LPAREN_TOK NOTES_TOK attribute . RPAREN_TOK

    DECIMAL_TOK  shift, and go to state 35
    FORMID_TOK   shift, and go to state 36
    STRING_TOK   shift, and go to state 37
    RPAREN_TOK   shift, and go to state 38


State 23

   21 var_decl: FORMID_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   22         | FORMID_TOK . LPAREN_TOK RPAREN_TOK BOOL_TOK
   23         | FORMID_TOK . LPAREN_TOK RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

    LPAREN_TOK  shift, and go to state 39


State 24

   11 cmdi: LPAREN_TOK DECLARE_FUNCTION_TOK var_decl . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 40


State 25

   28 an_formula: FORMID_TOK .

    $default  reduce using rule 28 (an_formula)


State 26

   29 an_formula: LPAREN_TOK . EQ_TOK an_term an_term RPAREN_TOK
   30           | LPAREN_TOK . DISTINCT_TOK an_terms RPAREN_TOK
   31           | LPAREN_TOK . DISTINCT_TOK an_formulas RPAREN_TOK
   32           | LPAREN_TOK . BVSLT_TOK an_term an_term RPAREN_TOK
   33           | LPAREN_TOK . BVSLE_TOK an_term an_term RPAREN_TOK
   34           | LPAREN_TOK . BVSGT_TOK an_term an_term RPAREN_TOK
   35           | LPAREN_TOK . BVSGE_TOK an_term an_term RPAREN_TOK
   36           | LPAREN_TOK . BVLT_TOK an_term an_term RPAREN_TOK
   37           | LPAREN_TOK . BVLE_TOK an_term an_term RPAREN_TOK
   38           | LPAREN_TOK . BVGT_TOK an_term an_term RPAREN_TOK
   39           | LPAREN_TOK . BVGE_TOK an_term an_term RPAREN_TOK
   40           | LPAREN_TOK . an_formula RPAREN_TOK
   41           | LPAREN_TOK . NOT_TOK an_formula RPAREN_TOK
   42           | LPAREN_TOK . IMPLIES_TOK an_formula an_formula RPAREN_TOK
   43           | LPAREN_TOK . ITE_TOK an_formula an_formula an_formula RPAREN_TOK
   44           | LPAREN_TOK . AND_TOK an_formulas RPAREN_TOK
   45           | LPAREN_TOK . OR_TOK an_formulas RPAREN_TOK
   46           | LPAREN_TOK . XOR_TOK an_formula an_formula RPAREN_TOK
   47           | LPAREN_TOK . EQ_TOK an_formula an_formula RPAREN_TOK
   48           | LPAREN_TOK . LET_TOK LPAREN_TOK lets RPAREN_TOK an_formula RPAREN_TOK

    FORMID_TOK    shift, and go to state 25
    LPAREN_TOK    shift, and go to state 26
    BVLT_TOK      shift, and go to state 41
    BVGT_TOK      shift, and go to state 42
    BVLE_TOK      shift, and go to state 43
    BVGE_TOK      shift, and go to state 44
    BVSLT_TOK     shift, and go to state 45
    BVSGT_TOK     shift, and go to state 46
    BVSLE_TOK     shift, and go to state 47
    BVSGE_TOK     shift, and go to state 48
    TRUE_TOK      shift, and go to state 27
    FALSE_TOK     shift, and go to state 28
    NOT_TOK       shift, and go to state 49
    AND_TOK       shift, and go to state 50
    OR_TOK        shift, and go to state 51
    XOR_TOK       shift, and go to state 52
    ITE_TOK       shift, and go to state 53
    EQ_TOK        shift, and go to state 54
    IMPLIES_TOK   shift, and go to state 55
    DISTINCT_TOK  shift, and go to state 56
    LET_TOK       shift, and go to state 57

    an_formula  go to state 58


State 27

   26 an_formula: TRUE_TOK .

    $default  reduce using rule 26 (an_formula)


State 28

   27 an_formula: FALSE_TOK .

    $default  reduce using rule 27 (an_formula)


State 29

   12 cmdi: LPAREN_TOK FORMULA_TOK an_formula . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 59


State 30

    6 cmdi: LPAREN_TOK LOGIC_TOK FORMID_TOK RPAREN_TOK .

    $default  reduce using rule 6 (cmdi)


State 31

   13 status: SAT_TOK .

    $default  reduce using rule 13 (status)


State 32

   14 status: UNSAT_TOK .

    $default  reduce using rule 14 (status)


State 33

   15 status: UNKNOWN_TOK .

    $default  reduce using rule 15 (status)


State 34

   20 attribute: STATUS_TOK status .

    $default  reduce using rule 20 (attribute)


State 35

    8 cmdi: LPAREN_TOK NOTES_TOK attribute DECIMAL_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 60


State 36

    7 cmdi: LPAREN_TOK NOTES_TOK attribute FORMID_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 61


State 37

    9 cmdi: LPAREN_TOK NOTES_TOK attribute STRING_TOK . RPAREN_TOK

    RPAREN_TOK  shift, and go to state 62


State 38

   10 cmdi: LPAREN_TOK NOTES_TOK attribute RPAREN_TOK .

    $default  reduce using rule 10 (cmdi)


State 39

   21 var_decl: FORMID_TOK LPAREN_TOK . RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK
   22         | FORMID_TOK LPAREN_TOK . RPAREN_TOK BOOL_TOK
   23         | FORMID_TOK LPAREN_TOK . RPAREN_TOK LPAREN_TOK ARRAY_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK LPAREN_TOK UNDERSCORE_TOK BITVEC_TOK NUMERAL_TOK RPAREN_TOK RPAREN_TOK

    RPAREN_TOK  shift, and go to state 63


State 40

   11 cmdi: LPAREN_TOK DECLARE_FUNCTION_TOK var_decl RPAREN_TOK .

    $default  reduce using rule 11 (cmdi)


State 41

   36 an_formula: LPAREN_TOK BVLT_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 64
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 65
    TERMID_TOK               shift, and go to state 66
    UNDERSCORE_TOK           shift, and go to state 67
    LPAREN_TOK               shift, and go to state 68
    BVLEFTSHIFT_1_TOK        shift, and go to state 69
    BVRIGHTSHIFT_1_TOK       shift, and go to state 70
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 71
    BVPLUS_TOK               shift, and go to state 72
    BVSUB_TOK                shift, and go to state 73
    BVNOT_TOK                shift, and go to state 74
    BVMULT_TOK               shift, and go to state 75
    BVDIV_TOK                shift, and go to state 76
    SBVDIV_TOK               shift, and go to state 77
    BVMOD_TOK                shift, and go to state 78
    SBVREM_TOK               shift, and go to state 79
    SBVMOD_TOK               shift, and go to state 80
    BVNEG_TOK                shift, and go to state 81
    BVAND_TOK                shift, and go to state 82
    BVOR_TOK                 shift, and go to state 83
    BVXOR_TOK                shift, and go to state 84
    BVNAND_TOK               shift, and go to state 85
    BVNOR_TOK                shift, and go to state 86
    BVXNOR_TOK               shift, and go to state 87
    BVCONCAT_TOK             shift, and go to state 88
    BVCOMP_TOK               shift, and go to state 89
    ITE_TOK                  shift, and go to state 90
    SELECT_TOK               shift, and go to state 91
    STORE_TOK                shift, and go to state 92

    an_term  go to state 93


State 42

   38 an_formula: LPAREN_TOK BVGT_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 64
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 65
    TERMID_TOK               shift, and go to state 66
    UNDERSCORE_TOK           shift, and go to state 67
    LPAREN_TOK               shift, and go to state 68
    BVLEFTSHIFT_1_TOK        shift, and go to state 69
    BVRIGHTSHIFT_1_TOK       shift, and go to state 70
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 71
    BVPLUS_TOK               shift, and go to state 72
    BVSUB_TOK                shift, and go to state 73
    BVNOT_TOK                shift, and go to state 74
    BVMULT_TOK               shift, and go to state 75
    BVDIV_TOK                shift, and go to state 76
    SBVDIV_TOK               shift, and go to state 77
    BVMOD_TOK                shift, and go to state 78
    SBVREM_TOK               shift, and go to state 79
    SBVMOD_TOK               shift, and go to state 80
    BVNEG_TOK                shift, and go to state 81
    BVAND_TOK                shift, and go to state 82
    BVOR_TOK                 shift, and go to state 83
    BVXOR_TOK                shift, and go to state 84
    BVNAND_TOK               shift, and go to state 85
    BVNOR_TOK                shift, and go to state 86
    BVXNOR_TOK               shift, and go to state 87
    BVCONCAT_TOK             shift, and go to state 88
    BVCOMP_TOK               shift, and go to state 89
    ITE_TOK                  shift, and go to state 90
    SELECT_TOK               shift, and go to state 91
    STORE_TOK                shift, and go to state 92

    an_term  go to state 94


State 43

   37 an_formula: LPAREN_TOK BVLE_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 64
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 65
    TERMID_TOK               shift, and go to state 66
    UNDERSCORE_TOK           shift, and go to state 67
    LPAREN_TOK               shift, and go to state 68
    BVLEFTSHIFT_1_TOK        shift, and go to state 69
    BVRIGHTSHIFT_1_TOK       shift, and go to state 70
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 71
    BVPLUS_TOK               shift, and go to state 72
    BVSUB_TOK                shift, and go to state 73
    BVNOT_TOK                shift, and go to state 74
    BVMULT_TOK               shift, and go to state 75
    BVDIV_TOK                shift, and go to state 76
    SBVDIV_TOK               shift, and go to state 77
    BVMOD_TOK                shift, and go to state 78
    SBVREM_TOK               shift, and go to state 79
    SBVMOD_TOK               shift, and go to state 80
    BVNEG_TOK                shift, and go to state 81
    BVAND_TOK                shift, and go to state 82
    BVOR_TOK                 shift, and go to state 83
    BVXOR_TOK                shift, and go to state 84
    BVNAND_TOK               shift, and go to state 85
    BVNOR_TOK                shift, and go to state 86
    BVXNOR_TOK               shift, and go to state 87
    BVCONCAT_TOK             shift, and go to state 88
    BVCOMP_TOK               shift, and go to state 89
    ITE_TOK                  shift, and go to state 90
    SELECT_TOK               shift, and go to state 91
    STORE_TOK                shift, and go to state 92

    an_term  go to state 95


State 44

   39 an_formula: LPAREN_TOK BVGE_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 64
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 65
    TERMID_TOK               shift, and go to state 66
    UNDERSCORE_TOK           shift, and go to state 67
    LPAREN_TOK               shift, and go to state 68
    BVLEFTSHIFT_1_TOK        shift, and go to state 69
    BVRIGHTSHIFT_1_TOK       shift, and go to state 70
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 71
    BVPLUS_TOK               shift, and go to state 72
    BVSUB_TOK                shift, and go to state 73
    BVNOT_TOK                shift, and go to state 74
    BVMULT_TOK               shift, and go to state 75
    BVDIV_TOK                shift, and go to state 76
    SBVDIV_TOK               shift, and go to state 77
    BVMOD_TOK                shift, and go to state 78
    SBVREM_TOK               shift, and go to state 79
    SBVMOD_TOK               shift, and go to state 80
    BVNEG_TOK                shift, and go to state 81
    BVAND_TOK                shift, and go to state 82
    BVOR_TOK                 shift, and go to state 83
    BVXOR_TOK                shift, and go to state 84
    BVNAND_TOK               shift, and go to state 85
    BVNOR_TOK                shift, and go to state 86
    BVXNOR_TOK               shift, and go to state 87
    BVCONCAT_TOK             shift, and go to state 88
    BVCOMP_TOK               shift, and go to state 89
    ITE_TOK                  shift, and go to state 90
    SELECT_TOK               shift, and go to state 91
    STORE_TOK                shift, and go to state 92

    an_term  go to state 96


State 45

   32 an_formula: LPAREN_TOK BVSLT_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 64
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 65
    TERMID_TOK               shift, and go to state 66
    UNDERSCORE_TOK           shift, and go to state 67
    LPAREN_TOK               shift, and go to state 68
    BVLEFTSHIFT_1_TOK        shift, and go to state 69
    BVRIGHTSHIFT_1_TOK       shift, and go to state 70
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 71
    BVPLUS_TOK               shift, and go to state 72
    BVSUB_TOK                shift, and go to state 73
    BVNOT_TOK                shift, and go to state 74
    BVMULT_TOK               shift, and go to state 75
    BVDIV_TOK                shift, and go to state 76
    SBVDIV_TOK               shift, and go to state 77
    BVMOD_TOK                shift, and go to state 78
    SBVREM_TOK               shift, and go to state 79
    SBVMOD_TOK               shift, and go to state 80
    BVNEG_TOK                shift, and go to state 81
    BVAND_TOK                shift, and go to state 82
    BVOR_TOK                 shift, and go to state 83
    BVXOR_TOK                shift, and go to state 84
    BVNAND_TOK               shift, and go to state 85
    BVNOR_TOK                shift, and go to state 86
    BVXNOR_TOK               shift, and go to state 87
    BVCONCAT_TOK             shift, and go to state 88
    BVCOMP_TOK               shift, and go to state 89
    ITE_TOK                  shift, and go to state 90
    SELECT_TOK               shift, and go to state 91
    STORE_TOK                shift, and go to state 92

    an_term  go to state 97


State 46

   34 an_formula: LPAREN_TOK BVSGT_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 64
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 65
    TERMID_TOK               shift, and go to state 66
    UNDERSCORE_TOK           shift, and go to state 67
    LPAREN_TOK               shift, and go to state 68
    BVLEFTSHIFT_1_TOK        shift, and go to state 69
    BVRIGHTSHIFT_1_TOK       shift, and go to state 70
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 71
    BVPLUS_TOK               shift, and go to state 72
    BVSUB_TOK                shift, and go to state 73
    BVNOT_TOK                shift, and go to state 74
    BVMULT_TOK               shift, and go to state 75
    BVDIV_TOK                shift, and go to state 76
    SBVDIV_TOK               shift, and go to state 77
    BVMOD_TOK                shift, and go to state 78
    SBVREM_TOK               shift, and go to state 79
    SBVMOD_TOK               shift, and go to state 80
    BVNEG_TOK                shift, and go to state 81
    BVAND_TOK                shift, and go to state 82
    BVOR_TOK                 shift, and go to state 83
    BVXOR_TOK                shift, and go to state 84
    BVNAND_TOK               shift, and go to state 85
    BVNOR_TOK                shift, and go to state 86
    BVXNOR_TOK               shift, and go to state 87
    BVCONCAT_TOK             shift, and go to state 88
    BVCOMP_TOK               shift, and go to state 89
    ITE_TOK                  shift, and go to state 90
    SELECT_TOK               shift, and go to state 91
    STORE_TOK                shift, and go to state 92

    an_term  go to state 98


State 47

   33 an_formula: LPAREN_TOK BVSLE_TOK . an_term an_term RPAREN_TOK

    BVCONST_BINARY_TOK       shift, and go to state 64
    BVCONST_HEXIDECIMAL_TOK  shift, and go to state 65
    TERMID_TOK               shift, and go to state 66
    UNDERSCORE_TOK           shift, and go to state 67
    LPAREN_TOK               shift, and go to state 68
    BVLEFTSHIFT_1_TOK        shift, and go to state 69
    BVRIGHTSHIFT_1_TOK       shift, and go to state 70
    BVARITHRIGHTSHIFT_TOK    shift, and go to state 71
    BVPLUS_TOK               shift, and go to state 72
    BVSUB_TOK                shift, and go to state 73
    BVNOT_TOK                shift, and go to state 74
    BVMULT_TOK               shift, and go to state 75
    BVDIV_TOK                shift, and go to state 76
    SBVDIV_TOK               shift, and go to state 77
    BVMOD_TOK                shift, and go to state 78
    SBVREM_TOK               shift, and go to state 79
    SBVMOD_TOK               shift, and go to state 80
    BVNEG_TOK                shift, and go to state 81
    BVAND_TOK                shift, and go to state 82
    BVOR_TOK                 shift, and go to state 83
    BVXOR_TOK                shift, and go to state 84
    BVNAND_TOK               shift, and go to state 85
    BVNOR_TOK                shift, and go to state 86
    BVXNOR_TOK               shift, and go to state 87
    BVCONCAT_TOK             shift, and go to state 88
    BVCOMP_TOK               shift, and go to state 89
    ITE_TOK                  shift, and go to state 90
    SELECT_TOK               shift, and go to state 91
    STORE_TOK                shift, and go to state 92

    an_term  go to state 99


State 48

   35 an_formula: LPAREN_TOK BVSGE_TOK . an_term an_term RPAREN_TOK
